<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_the_other_person_is_already_sharing_their_screen_0">"The other person is already sharing their screen"</string>
    <string name="text_could_not_start_screen_sharing_1">"Could not start screen sharing"</string>
    <string name="text_could_not_start_screen_sharing_try_again_2">"Could not start screen sharing. Try again."</string>
    <string name="text_no_internet_connection_3">"No internet connection"</string>
    <string name="text_waiting_for_an_answer_4">"Waiting for an answer…"</string>
    <string name="text_trying_to_connect_5">"Trying to connect…"</string>
    <string name="text_could_not_open_screen_sharing_permission_6">"Could not open screen sharing permission"</string>
    <string name="text_could_not_start_the_call_7">"Could not start the call"</string>
    <string name="text_signed_in_on_another_device_8">"Signed in on another device"</string>
    <string name="text_shortcut_already_added_9">"Shortcut already added"</string>
    <string name="text_a_shortcut_for_value_is_already_on_your_home_screen_add_another_10">"A shortcut for %1$s is already on your home screen. Add another?"</string>
    <string name="text_add_another_11">"Add another"</string>
    <string name="text_cancel_12">"Cancel"</string>
    <string name="text_sign_in_saved_reconnecting_13">"Sign-in saved. Reconnecting"</string>
    <string name="text_this_home_screen_does_not_support_shortcuts_14">"This home screen does not support shortcuts"</string>
    <string name="text_could_not_add_the_shortcut_check_the_contact_and_try_again_15">"Could not add the shortcut. Check the contact and try again."</string>
    <string name="text_could_not_refresh_contacts_16">"Could not refresh contacts"</string>
    <string name="text_no_tinitalk_server_at_this_address_check_the_address_17">"No TiniTalk server at this address. Check the address"</string>
    <string name="text_the_server_is_incompatible_with_this_app_version_18">"The server is incompatible with this app version"</string>
...
    <string name="text_you_are_sharing_your_screen_95">"You are sharing your screen"</string>
    <string name="text_preparing_screen_sharing_96">"Preparing screen sharing…"</string>
    <string name="text_stop_sharing_97">"Stop sharing"</string>
    <string name="text_end_call_98">"End call"</string>
    <string name="text_ending_call_99">"Ending call…"</string>
    <string name="text_active_calls_100">"Active calls"</string>
    <string name="text_back_101">"Back"</string>
    <string name="text_about_102">"About"</string>
    <string name="text_application_103">"Application"</string>
    <string name="text_version_104">"Version"</string>
    <string name="text_commit_105">"Commit"</string>
    <string name="text_server_106">"Server"</string>
    <string name="text_address_107">"Address"</string>
    <string name="text_not_specified_108">"Not specified"</string>
    <string name="text_api_version_109">"API version"</string>
    <string name="text_not_specified_110">"Not specified"</string>
    <string name="text_server_status_111">"Server status"</string>
    <string name="text_add_account_112">"Add account"</string>
    <string name="text_sign_in_again_113">"Sign in again"</string>
    <string name="text_add_114">"Add"</string>
    <string name="text_sign_in_115">"Sign in"</string>
    <string name="text_username_116">"Username"</string>
    <string name="text_password_117">"Password"</string>
...
