<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="call_cancel">Cancel</string>
    <string name="language_title">Language</string>
    <string name="language_system">System default</string>
    <plurals name="missed_calls_count">
        <item quantity="one">%1$d missed call</item>
        <item quantity="other">%1$d missed calls</item>
    </plurals>
    <plurals name="calls_count">
        <item quantity="one">%1$d call</item>
        <item quantity="other">%1$d calls</item>
    </plurals>
    <plurals name="contacts_count">
        <item quantity="one">%1$d contact</item>
        <item quantity="other">%1$d contacts</item>
    </plurals>
</resources>
